--- a/nyomtatas.css
+++ b/nyomtatas.css
@@ -6,7 +6,7 @@ body{
   background-position: center;
   height: 250px;
   padding-top: 75px;
-  background-image:image("drukletters.jpg");
+  background-image:url(drukletters.jpg);
 }
 
 .bg-fej h1{
